# ai-agent

./: .gitignore  bot.py  fly.toml  mise.toml  pyproject.toml
src/: bot.py
src/actions/: action.py  document.py  project.py  settings.py  task.py
src/arguments/: __init__.py  parser.py
src/commands/: __init__.py  ask.py  command.py  project.py  register.py  settings.py  task.py
src/database/: database.py
src/mistral/: agent.py  chat.py  functions.py  ocr.py  parsers.py  rag.py
src/model/: __init__.py  document.py  project.py  task.py  user.py
src/parsers/: content.py  formats.py  mime.py  url.py
src/reactions/: Reactions.py  __init__.py
src/response/: ButtonResponse.py
src/test/: mockbot_ui.py
src/util/: messages.py  types.py  util.py
test/: mockbot.py  mockbot_ui.py  mockbot_ui.tcss
