[project]
name = "Discoin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord-py>=2.4.0",
    "mistralai>=1.4.0",
    "python-dotenv>=1.0.1",
    "textual>=2.1.2",
    "beanie>=1.29.0",
    "coloredlogs>=15.0.1",
    "result>=0.17.0",
]

[tool.setuptools]
py-modules = []
